Correct services text-wrap background color

--- a/css/main.css
+++ b/css/main.css
@@ -675,7 +675,7 @@ to{
     align-items: center;
     display: flex;
     flex-flow: row wrap;
-    background-color: #fff;
+    background-color: #fffbf8;
   }
 
   #transform-text-wrap {
